@@ -58,6 +58,7 @@ public class Lox {
     if (hadError) return;
     Resolver resolver = new Resolver(interpreter);
     resolver.resolve(statements);
+    // resolver.printScopes();
     
     // Stop if there was a resolution error.
     if (hadError) return;
